[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Border_RoundedButtonStyleBox.tres" type="StyleBox" id=1]
[ext_resource path="res://Fonts/SmallText.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/MediumText.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/MoneyIcon.png" type="Texture" id=4]
[ext_resource path="res://Fonts/VerySmallText.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/ConfirmPurchaseEquipment.gd" type="Script" id=6]
[ext_resource path="res://UI/Border_Purple_RoundedButtonStyleBox.tres" type="StyleBox" id=7]
[ext_resource path="res://UI/Border_Red_RoundedButtonStyleBox.tres" type="StyleBox" id=8]

[node name="ConfirmPurchase" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.325
anchor_top = 0.188
anchor_right = 0.676
anchor_bottom = 0.743
margin_left = -1.0
margin_top = -0.360001
margin_right = -0.28009
margin_bottom = 0.039978
rect_min_size = Vector2( 450, 425 )
custom_styles/panel = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 400.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Confirm your purchase:"
align = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 48.0
margin_right = 400.0
margin_bottom = 52.0

[node name="VBox_Spacing" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 62.0
margin_right = 400.0
margin_bottom = 375.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/VBox_Spacing"]
margin_right = 400.0
margin_bottom = 57.0
custom_constants/separation = 14

[node name="Label_Item" type="Label" parent="Panel/VBoxContainer/VBox_Spacing/VBoxContainer"]
margin_right = 400.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Dumbbell T1"
align = 1

[node name="Label_Description" type="Label" parent="Panel/VBoxContainer/VBox_Spacing/VBoxContainer"]
margin_top = 38.0
margin_right = 400.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
text = "Provides -20% Rep Speed for 100 reps"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/VBox_Spacing"]
margin_top = 107.0
margin_right = 400.0
margin_bottom = 135.0

[node name="Label_Cost" type="Label" parent="Panel/VBoxContainer/VBox_Spacing/HBoxContainer3"]
margin_top = 2.0
margin_right = 200.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Cost:"
align = 1

[node name="HBox_Cost" type="HBoxContainer" parent="Panel/VBoxContainer/VBox_Spacing/HBoxContainer3"]
margin_left = 204.0
margin_right = 400.0
margin_bottom = 28.0
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/VBox_Spacing/HBoxContainer3/HBox_Cost"]
margin_left = 46.0
margin_right = 74.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Label_Cost2" type="Label" parent="Panel/VBoxContainer/VBox_Spacing/HBoxContainer3/HBox_Cost"]
margin_left = 78.0
margin_top = 2.0
margin_right = 149.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "1000.00"
align = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/VBoxContainer/VBox_Spacing"]
margin_top = 199.0
margin_right = 400.0
margin_bottom = 299.0
size_flags_vertical = 6
custom_constants/separation = 50
alignment = 1

[node name="Button_Cancel" type="Button" parent="Panel/VBoxContainer/VBox_Spacing/HBoxContainer5"]
margin_right = 175.0
margin_bottom = 100.0
rect_min_size = Vector2( 175, 100 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = ExtResource( 8 )
text = "Cancel"

[node name="Button_Purchase" type="Button" parent="Panel/VBoxContainer/VBox_Spacing/HBoxContainer5"]
margin_left = 225.0
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 175, 100 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = ExtResource( 7 )
text = "Purchase"

[connection signal="pressed" from="Panel/VBoxContainer/VBox_Spacing/HBoxContainer5/Button_Cancel" to="." method="_on_Button_Cancel_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/VBox_Spacing/HBoxContainer5/Button_Purchase" to="." method="_on_Button_Purchase_pressed"]
